--- a/package.json
+++ b/package.json
@@ -3,46 +3,39 @@
     "version": "0.1.0",
     "private": true,
     "homepage": "https://github.com/Johnpo34/JPs_React_Portfolio",
-    "dependecies": {
-        "@testing-library/jest-dom": "^5.11.4",
-        "@testing-library/react": "^13.1.1",
-        "@testing-library/user-event": "^13.5.0",
+    "dependencies": {
         "bootstrap": "^5.1.3",
-        "gh-pages": "^3.2.3",
-        "react": "^18.0.0",
-        "react-bootstrap": "^2.2.3",
-        "react-dom": "^18.0.0",
-        "react-icons": "^4.1.0",
-        "react-scripts": "5.0.1",
-        "web-vitals": "^2.1.4"
+        "react": "^18.1.0",
+        "react-dom": "^18.1.0",
+        "react-scripts": "^5.0.1"
     },
-        "scripts": {
+    "scripts": {
         "predeploy": "npm run build",
         "deploy": "gh-pages -d build",
         "start": "react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
-      },
-      "eslintConfig": {
+    },
+    "eslintConfig": {
         "extends": [
-          "react-app",
-          "react-app/jest"
+            "react-app",
+            "react-app/jest"
         ]
-      },
-      "browserslist": {
+    },
+    "browserslist": {
         "production": [
-          ">0.2%",
-          "not dead",
-          "not op_mini all"
+            ">0.2%",
+            "not dead",
+            "not op_mini all"
         ],
         "development": [
-          "last 1 chrome version",
-          "last 1 firefox version",
-          "last 1 safari version"
+            "last 1 chrome version",
+            "last 1 firefox version",
+            "last 1 safari version"
         ]
-      },
-      "devDependencies": {
+    },
+    "devDependencies": {
         "@iconify/react": "^3.2.1"
-      }
+    }
 }
